--- a/archijavaspringboot/src/main/resources/templates/login.html
+++ b/archijavaspringboot/src/main/resources/templates/login.html
@@ -16,7 +16,7 @@
 	<div class="container">
 		<img th:src="@{images/userlogin.png}" class="img-responsive center-block" width="150" height="150" alt="Logo" />
 		<form th:action="@{/login}" method="POST" class="form-signin">
-			<h3 class="form-signin-heading" th:text="MACROSOFT AS"></h3>
+			<h3 class="form-signin-heading" th:text="MACROSOFT"></h3>
 			<br/>
 			 
 			<input type="text" id="email" name="email"  th:placeholder="Email"
